--- a/src/admin/config.yaml
+++ b/src/admin/config.yaml
@@ -1,20 +1,20 @@
 backend:
   name: git-gateway
   branch: main
-  publish_mode: editorial_workflow
-  media_folder: "public/assets/blog"
-  public_folder: "/assets/img"
-  collections:
-    - name: "blog"
-      label: "Blog"
-      folder: "src/blog"
-      create: true
-      slug: "{{day}}-{{month}}-{{year}}-{{slug}}"
-      fields:
-        - {label: "Layout", name: "layout", widget: "hidden", default: "blog"}
-        - {label: "Título", name: "title", widget: "string"}
-        - {label: "Autor", name: "author", widget: "string"}
-        - {label: "Fecha Publicación", name: "date", widget: "datetime"}
-        - {label: "Etiquetas", name: "tags", widget: "list", default: ["publicación"]}
-        - {label: "Foto Principal", name: "thumbnail", widget: "image"}
-        - {label: "Cuerpo", name: "body", widget: "markdown"}
+media_folder: "public/assets/blog"
+public_folder: "/assets/blog"
+collections:
+  - name: "blog"
+    label: "Blog"
+    folder: "src/blog"
+    create: true
+    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
+    fields:
+      - { label: "Title", name: "title", widget: "string" }
+      - { label: "Description", name: "description", widget: "string" }
+      - { label: "Author", name: "author", widget: "string" }
+      - { label: "Date", name: "date", widget: "datetime" }
+      - { label: "Tags", name: "tags", widget: "list", default: ["post"] }
+      - { label: "Featured Image", name: "image", widget: "image" }
+      - { label: "Image caption", name: "imageAlt", widget: "string" }
+      - { label: "Body", name: "body", widget: "markdown" }
