--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
-node_modules/
-css/
-public/
+# dependencies installed by npm
+node_modules
+
+# build artefacts
+public
+css
+
+# secrets and errors
+.env
+.log
+
+# macOS related files
+.DS_Store
