--- a/src/admin/config.yaml
+++ b/src/admin/config.yaml
@@ -1,6 +1,6 @@
 backend:
   name: git-gateway
-  branch: netlifycms-d
+  branch: main
 media_folder: "public/assets/blog"
 public_folder: "/assets/blog"
 collections:
